--- a/_drafts/2017-01-31-Elastic.md
+++ b/_drafts/2017-01-31-Elastic.md
@@ -18,7 +18,29 @@ We have four ways:
 * Parent/Child relationships
 
 #Application side joins
-It's possible to emulate the joins into application side.
+It's possible to emulate the joins on application side.
+For instance, imagine we are indexing user and forum posts. In the relattional world we coauld do something like this:
+
+{% highlight raw %}
+PUT /my_forum/users/1
+{
+    "name"  : "Paolo Rossi",
+    "email" : "paol.rossi@mail.it",
+    "dob"   : "1982/11/20"
+}
+{% endhighlight %}
+
+{% highlight raw %}
+PUT /my_forum/posts/1
+{
+    "title" : "My post",
+    "body"  : "this is my first post",
+    "user"  : "1"
+}
+{% endhighlight %}
+
+Finding posts by user Paolo is necessary to search "Paolo" into users to find theirs ID, and then pass the id into query to find posts.
+
 
 #Data denormalition
 For who came from sql word this is like braking the rules... having redundant copies of data in each document to get the best search performace.
