--- a/_drafts/2017-01-31-Elastic.md
+++ b/_drafts/2017-01-31-Elastic.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: Relational vs NoSql Database
+title: Relationships into Elasticsearch
 excerpt: ""
 categories: [database]
 comments: true
-image:
-  feature: 
+image: 
+  feature: http://cdn.images.express.co.uk/img/dynamic/130/590x/Mountains-625882.jpg
 ---
 
 Elasticsearch is a distibuited real time search and analytics engine. Into this system every information is stored like a document.
@@ -17,7 +17,7 @@ We have four ways:
 * Nested objects
 * Parent/Child relationships
 
-#Application side joins
+# Application side joins
 It's possible to emulate the joins on application side.
 For instance, imagine we are indexing user and forum posts. In the relattional world we coauld do something like this:
 
@@ -42,13 +42,13 @@ PUT /my_forum/posts/1
 Finding posts by user Paolo is necessary to search "Paolo" into users to find theirs ID, and then pass the id into query to find posts.
 
 
-#Data denormalition
+# Data denormalition
 For who came from sql word this is like braking the rules... having redundant copies of data in each document to get the best search performace.
 This is optimal if you are sure that your data don't change frequently. On the other side, will be necessary to update the same imnformation in a lot of points. 
 Talk about the atomic problems
 
-#Nested objects
+# Nested objects
 To avoid the concurrency problems, that we have denormalizing data, it's possoble to store related objects into a single document.
 
-#Parent/Child relationships
+# Parent/Child relationships
 Da indagare e studiare
